--- a/templates/dashboard.yml.j2
+++ b/templates/dashboard.yml.j2
@@ -3,30 +3,25 @@ http:
   routers:
     traefik:
       entrypoints: [{{ traefik_https | ternary('websecure', 'web') }}]
-      rule: {% if traefik_fqdn | length > 0 %}"Host(`{{ traefik_fqdn }}`)"
+      rule: {% if traefik_dashboard_fqdn | length > 0 %}"Host(`{{ traefik_dashboard_fqdn }}`)"
             {% else %}"PathPrefix(`/api`) || PathPrefix(`/dashboard`)"
             {% endif %}
       service: api@internal
-      middlewares: {{ traefik_dashboard_middlewares }}
+      middlewares: {{ traefik_dashboard_middlewares | list }}
 
   middlewares:
-    default-compress:
-      compress: {}
-    default-security:
-      chain:
-        middlewares:
-          - rate-limit
-          - secure-headers
-    auth-basic:
+    dashboard-auth-basic:
       basicAuth:
         headerField: X-WebAuth-User
         users:
           - "{{ traefik_dashboard_user }}:{{ traefik_dashboard_pass | password_hash('bcrypt', traefik_salt) }}"
-    rate-limit:
+
+    dashboard-rate-limit:
       rateLimit:
         average: 100
         burst: 50
-    secure-headers:
+
+    dashboard-secure-headers:
       headers:
         accessControlAllowMethods:
           - GET
@@ -37,20 +32,7 @@ http:
         addVaryHeader: true
         hostsProxyHeaders:
           - "X-Forwarded-Host"
-        contentTypeNosniff: true
-        browserXssFilter: true
-        referrerPolicy: "origin-when-cross-origin,strict-origin-when-cross-origin"
         contentSecurityPolicy: "frame-ancestors 'self';"
         customResponseHeaders:
           X-Robots-Tag: "none,noarchive,nosnippet,notranslate,noimageindex,noindex"
           server: ""
-
-tls:
-  options:
-    default:
-      minVersion: VersionTLS12
-      cipherSuites:
-        - TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
-        - TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305
-        - TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
-        - TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305
